NG1651. Fixed asterisk being cut off when textOverflow is set to ellipsis

--- a/src/components/datagrid/_datagrid.scss
+++ b/src/components/datagrid/_datagrid.scss
@@ -3577,7 +3577,7 @@ $datagrid-small-row-height: 25px;
 
       &.required::after {
         @include required-indicator();
-
+        position: static;
         color: $datagrid-required-icon-color;
       }
     }
